--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,18 @@
+<!DOCTYPE html>
 <html>
 <body>
-  <form method="post" action="../cadastro/processa_form.php">
-    <p>Nome: </p>
-    <input type="text" name="nome">
-    <p>Idade: </p>
-    <input type="number" name="idade">
+  <form method="post" action="../cadastro/process_form.php">
+    <p>Title: </p>
+    <input type="text" name="title">
+    <p>Author: </p>
+    <input type="number" name="author">
     <br>
+    <p>Owner: </p>
+    <input type="number" name="owner">
+    <br>
+    <p>Description: </p>
+    <input type="number" name="description">
+    <br><br>
     <button type="submit">Enviar</button>
   </form>
 </body>
