--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <p>Title: </p>
     <input type="text" name="title">
     <p>Author: </p>
-    <input type="number" name="author">
+    <input type="text" name="author">
     <br>
     <p>Owner: </p>
-    <input type="number" name="owner">
+    <input type="text" name="owner">
     <br>
     <p>Description: </p>
-    <input type="number" name="description">
+    <input type="text" name="description">
     <br><br>
     <button type="submit">Enviar</button>
   </form>
